security_group.tf
resource "aws_security_group" "backend_sg" {
  name        = "SG-${var.projectName}"
  description = "Security group for backend servers"
  vpc_id      = ""

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "SG-${var.projectName}"
  }
}
